--- a/Joker.html
+++ b/Joker.html
@@ -117,13 +117,13 @@
     <header></header>
     <main>
         <a name="inicio">
-            <h1>Resumo do Filme</h1>
+            <h1>Resumo do Filme: Coringa</h1>
         </a>
         <ul class="bar">
             <li><a class="nav" href="index.html">Filmes</a></li>
             <li><a class="nav" href="#desen">Desenvolvimento</a></li>
             <li><a class="nav" href="#conclu">Conclusão</a></li>
-            <li><a class="nav" href="#video">Videos</a></li>
+            <li><a class="nav" href="#video">Trailer</a></li>
             <li><a class="nav" href="#trilha">Trilha Sonora</a></li>
         </ul>
         <h2>Introdução</h2>
@@ -171,7 +171,7 @@
         <p>Nas cenas finais, Arthur está internado num hospital psiquiátrico e conversa com a terapeuta. No rosto,
             mantem o seu riso de Coringa que anuncia que a confusão está apenas começando.</p>
 
-        <h1><a name="video" href="#inicio">Videos</a></h1>
+        <h1><a name="video" href="#inicio">Trailer</a></h1>
         <object data="https://www.youtube.com/embed/621pfj0EfIc?si=PDnWwfWoSPTwnvUI" type="video/mp4" width="500"
             height="300"></object>
 
