--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- conteudo principal -->
     <main class="container">
         <div class="sumario" align="center">
-            <table >
+            <table>
                 <tr>
                     <th colspan="2">***************** Sumário *****************</th>
                 </tr>
@@ -200,7 +200,7 @@
             <h2>Alguns Filmes</h2>
             <ol>
                 <li>Coringa</li>
-                <li>Guardiões da Galáxia</li>
+                <li>Guardiões da Galáxia Vol. 3</li>
                 <li>O Batman</li>
                 <li>Homem-Aranha: Longe de casa</li>
                 <li>Vingadores: Ultimato</li>
@@ -215,7 +215,8 @@
                     href="Joker.html" class="saiba">Saiba Mais...</a></dd>
             <dt>2-Guardiões da Galáxia Vol.3</dt>
             <dd>Peter Quill deve reunir sua equipe para defender o universo e proteger um dos seus. Se a missão não for
-                totalmente bem-sucedida, isso pode levar ao fim dos Guardiões. <a class="saiba" href="guardioes.html">Saiba Mais...</a></dd>
+                totalmente bem-sucedida, isso pode levar ao fim dos Guardiões. <a class="saiba"
+                    href="guardioes.html">Saiba Mais...</a></dd>
 
 
         </dl>
@@ -225,7 +226,8 @@
     <!-- rodapé -->
     <footer>
         <div class="rodape">
-            <h4>Cadastre-se para receber mais Informações:<a href="cadastro.html" class="cadastro">www.cadastro.com.br</a></h4>
+            <h4>Cadastre-se para receber mais Informações:<a href="cadastro.html"
+                    class="cadastro">www.cadastro.com.br</a></h4>
             <h4><a href="index.html" class="filme">www.filme.com.br</a></h4>
         </div>
     </footer>
