--- a/index.html
+++ b/index.html
@@ -221,6 +221,36 @@
 
         </dl>
 
+        <table border="1">
+            <!-- <tr>
+                <th colspan="2">FILMES</th>
+            </tr> -->
+            <tr>
+                <th>TITULO</th>
+                <th>LANCAMENTO(BR)</th>
+            </tr>
+            <tr>
+                <td>CORINGA</td>
+                <td>03/10/2019</td>
+            </tr>
+            <tr>
+                <td>GUARDIÕES G. VOL.3</td>
+                <td>04/05/2023</td>
+            </tr>
+            <tr>
+                <td>O BATMAN</td>
+                <td>03/03/2022</td>
+            </tr>
+            <tr>
+                <td>HOMEM-ARANHA:L.C</td>
+                <td>04/07/2019</td>
+            </tr>
+            <tr>
+                <td>VINGADORES:ULTIMATO</td>
+                <td>25/04/2019</td>
+            </tr>
+        </table>
+
 
     </main>
     <!-- rodapé -->
