--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <th colspan="2">FILMES</th>
             </tr> -->
             <tr>
-                <th>TITULO</th>
+                <th>TITULOS</th>
                 <th>LANCAMENTO(BR)</th>
             </tr>
             <tr>
